@@ -6,7 +6,7 @@ AUX avahi-0.6.24-libintl.patch 542 RMD160 918aa11cdbce6f38d9a9446c798db2bc43a957
 DIST avahi-0.6.24.tar.gz 1115626 RMD160 94f59ccbd14d99e91e259b27dd7f03404c6691e6 SHA1 a187af361fefc8bda026936bb07ccdeb41dc74bc SHA256 260070d46188ed58f5dc1174ce632c096679f6391a2b729366e7aba349d4b950
 DIST avahi-0.6.25.tar.gz 1103653 RMD160 3025f774360a8ea3b9de87e2df0b00387569aaf2 SHA1 7ce8ed5a494d72401dd81f64594fda59d2ec91fd SHA256 9220d974f5515b8ccfa3900cd72cedcac0fa4cc87ca3c64405f7c55346cbba59
 EBUILD avahi-0.6.24-r2.ebuild 5400 RMD160 f955a49312b3d0b269e08358c1dce3a6ad00f037 SHA1 12f531483b56407b83be6ed2639d79f671c23226 SHA256 8ea2e741aea77123d87ba83f71cdebde92886e8716554916b87a9a79bd67d018
-EBUILD avahi-0.6.25-r1.ebuild 4866 RMD160 ad84c41cae3d7cae4031724eb7689f1f15b9ae30 SHA1 8b65604c02ad5d04968b607de8bf241868be727b SHA256 0bbe2db1ba8453db0f6eae360cc23fd269ce006a83600819284dce1aa3cee97b
+EBUILD avahi-0.6.25-r1.ebuild 5012 RMD160 7957b5fca95a809d35541a75d6ed6c08c9e7c3fd SHA1 5e97c7be346e72e9bc6990547b752563c415e4db SHA256 4503ebb323a83aba185c6db35de5bc0a0debbdae902b4857ff96e38e4c26f60a
 EBUILD avahi-0.6.25.ebuild 5352 RMD160 0fb9fe844fba482fbfc95caf8744b71539c55324 SHA1 353f53cbbf73ed27c5b85629fd2e09374f08a251 SHA256 854cb5b236f3109a227970a9aa99904c1f947680a8bef1345c3e98bdc89d0efa
-MISC ChangeLog 26148 RMD160 16a98ad232a0f11404722090fc9c82c3b92bbd10 SHA1 84db8b548895af9047e7ce863d690cc1e620d347 SHA256 8bbd2b087b249db25e6aaaf46107906ca6dacfaba4f1f8f92d62417257fce959
+MISC ChangeLog 26489 RMD160 cc969fa79eeb8f67a435202dc7a6f8567893a2c0 SHA1 736be7d137d639a874a70f629c226e4ab2fae31d SHA256 6e78fd79e78a97f42f48687a0e3f49bd386b654efd6140bc3de633c09d678ef3
 MISC metadata.xml 609 RMD160 fa4efaaf9b8ac6d75251c9bd1f0721ea175acda9 SHA1 4532738c9ff6d9d2a2aef226b827919ac31be2de SHA256 365224bb3c21c159a89fa03ea08c534eb27cc2df62012a69e03ad81779607faa
